# rando-shuffler

./: Cargo.toml  logic.txt  readme.md  scratch.txt  test.logic
logic_parser/: Cargo.toml  build.rs
logic_parser/src/: ast.rs  descriptor.rs  grammar.lalrpop  lexer.rs  lib.rs  logic.rs
logic_parser/src/descriptor/: ast.rs  grammar.lalrpop
logic_parser/src/logic/: ast.rs  grammar.lalrpop  lexer.rs
logic_util/: Cargo.toml
logic_util/src/: graph.rs  lib.rs  logic.rs
rando_core/: Cargo.toml
rando_core/src/: algebra.rs  database.rs  descriptor.rs  lib.rs  shuffles.rs  statey.rs
rando_core/src/database/: cache.rs  descriptor_eval.rs  query.rs  test.rs  update.rs
rando_core/src/database/update/: descriptor.rs
rando_parser/: Cargo.toml
rando_parser/src/: common.rs  descriptor.rs  lib.rs  logic.rs  module.rs
rando_parser/src/common/: error.rs  parser.rs  span.rs  test.rs
rando_parser/src/descriptor/: ast.rs  grammar.lalrpop  parser.rs  typecheck.rs
rando_parser/src/descriptor/parser/: test.rs
rando_parser/src/logic/: ast.rs  check.rs  grammar.lalrpop  indent.rs  lexer.rs  parser.rs
rando_parser/src/logic/check/: error.rs  test.rs
rando_parser/src/logic/parser/: error.rs  test.logic  test.rs
rando_parser/src/shuffle/: ast.rs  parser.rs
rando_util/: Cargo.toml
rando_util/src/: graph.rs
src/: main.rs
test/: module.yaml  test.logic  test_tod.logic
