[package]
name = "logic_parser"
version = "0.1.0"
authors = ["berylliosis <berylliumninja@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.4", default-features = false }

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
lazy_static = "1.4.0"