[package]
name = "rando_parser"
version = "0.1.0"
authors = ["berylliosis <berylliumninja@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.4", default-features = false, features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19.4", features = ["lexer"] }
regex = "1"
lazy_static = "1.4.0"