[package]
name = "rando_parser"
version = "0.1.0"
authors = ["berylliosis <berylliumninja@gmail.com>"]
edition = "2021"

[dependencies]
rando_core = { path = "../rando_core" }
nom = "7.1.0"
assert_matches = "1.5.0"
codespan-reporting = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
zip = "0.5.13"